# suo-parser

./: .gitignore  .npmignore  .npmrc  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
.github/workflows/: test.yml
src/: generator.rs  generator.ts  index.ts  lib.rs  parser.rs  parser.ts  tokenizer.rs  tokenizer.ts  types.rs  types.ts  utils.rs
src/utils/: location.rs  location.ts  logTypes.ts  log_types.rs
test/: generator.spec.ts  parser.spec.ts  tokenizer.spec.ts
