[package]
name = "suo-parser"
version = "0.2.0"
description = "A timeline parser for FFXIV/ACT plugins"
edition = "2021"
authors = [
  "Maiko Tan <maiko.tan.coding@gmail.com>"
]
license = "MIT"
repository = "https://github.com/MaikoTan/suo-parser"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.97"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-pack = "0.13"
# For unit tests
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
